# gene_deconvolution_challenge

./: README.md
AliGebily/: Dockerfile  ReadMe.md  UNI-DUO-spearman.py  genes-merge-percentiles-to-csv.py  genes-prediction.final.py  genes-training-percentiles.py  predict.sh
Ardavel/: Dockerfile
Ardavel/src/DPeak/: CMakeLists.txt  main.cpp
Ardavel/src/DPeak/adjustment/: BVNAdjuster.cpp  BVNAdjuster.h
Ardavel/src/DPeak/clustering/: GMM.cpp  GMM.h
Ardavel/src/DPeak/data/: BarcodeToGeneMap.h  Cluster.h  DeconvolutionResult.h  PairedGenes.h  UnsureResults.h  types.h
Ardavel/src/DPeak/filesystem/: GCTFile.cpp  GCTFile.h  filesystem.h  utils.cpp  utils.h
Ardavel/src/DPeak/filtration/: IsolatedMeasurementsFilter.cpp  IsolatedMeasurementsFilter.h
Ardavel/src/DPeak/io/: fast_input.h  well_reader.h  well_reader_gcc_linux.h  well_reader_gcc_windows.h  well_reader_msvc.h
Ardavel/src/DPeak/math/: BivariateNormalDistribution.cpp  BivariateNormalDistribution.h  NormallyDistributedClusterFit.h  basic_statistics.h  median.cpp  median.h  probability.cpp  probability.h
Ardavel/src/DPeak/params/: ParameterParser.cpp  ParameterParser.h  Parameters.cpp  Parameters.h
Ardavel/src/DPeak/pipeline/: Pipeline.cpp  Pipeline.h
LastEmperor/: Dockerfile  Primer_Readme.sh  Question Responses.txt  Readme.MD  main.py
Ramzes2/: Dockerfile  model.hdf5  predict.py
Ramzes2/libs/: attention_model.py  cae_model.py  data.py  fake_data.py  generators.py  losses.py  models.py  params.py  postprocessing.py  preprocessing.py  resnet_model.py  seg_models.py  time_log.py
gardn999/: Dockerfile  Readme.md  compile.sh  gardn999_CMap_DPeak_Challenge.odt  predict.sh  test.sh  train.sh
gardn999/src/: Barcode.java  Experiment.java  Gene.java  Main.java  Pair.java  RFRegressor.java  Set.java
mkagenius/: Dockerfile  script.cpp
mvaudel/: Dockerfile  cmap.sh
vladaburian/: Dockerfile  Makefile  setup.py
vladaburian/gene/: cmd_main.py  cmd_prepare_datasets.py  conf.py  dataset.py  deconv.py  em.py  forest.py  gio.py  run_forest.py  tune.py  visualize.py
vladaburian/gene/speedup/: code2gene.cpp  em.cpp  io.cpp  main.cpp  module.cpp
